data charger change

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -405,6 +405,432 @@
    "source": [
     "app = Final_Model(\"Venezuela\",\"2022/09/09\",50000,10000000,0.8,0.5,150,0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "def dataframes_charger(filename:str=None,\n",
+    "                       route:str=False) -> pd.DataFrame:\n",
+    "    \"\"\"Función que importa el csv deseado desde el directorio\n",
+    "    \n",
+    "    -------------------------------------\n",
+    "    # Args:\n",
+    "        - filename: (str) name of the file\n",
+    "        - route (str) route if different from the current one\\n\n",
+    "        (default: False)\n",
+    "    -------------------------------------\n",
+    "    # Return:\n",
+    "        pd.DataFrame\"\"\"\n",
+    "    if not route:\n",
+    "        current_path = Path(os.getcwd().join(f\"/{filename}\"))\n",
+    "    else:\n",
+    "        current_path = route\n",
+    "    data = pd.read_csv(current_path)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Energy_production</th>\n",
+       "      <th>Energy_consumption</th>\n",
+       "      <th>CO2_emission</th>\n",
+       "      <th>per_capita_production</th>\n",
+       "      <th>Energy_intensity_by_GDP</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>eficiency</th>\n",
+       "      <th>energy_dependecy</th>\n",
+       "      <th>...</th>\n",
+       "      <th>co2_pc</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Energy_type</th>\n",
+       "      <th>CODE_x</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>clusters</th>\n",
+       "      <th>energy_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>279.389000</td>\n",
+       "      <td>15182.60000</td>\n",
+       "      <td>0.150000</td>\n",
+       "      <td>0.155000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>104.341</td>\n",
+       "      <td>5.670</td>\n",
+       "      <td>-0.005000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.001000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.424000</td>\n",
+       "      <td>-66.590000</td>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>renewables_n_other</td>\n",
+       "      <td>VEN</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>279.389000</td>\n",
+       "      <td>15182.60000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.812000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>104.341</td>\n",
+       "      <td>5.670</td>\n",
+       "      <td>4.188000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.003000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.424000</td>\n",
+       "      <td>-66.590000</td>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>petroleum_n_other_liquids</td>\n",
+       "      <td>VEN</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>279.389000</td>\n",
+       "      <td>15182.60000</td>\n",
+       "      <td>0.616000</td>\n",
+       "      <td>0.616000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>104.341</td>\n",
+       "      <td>5.670</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.002000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.424000</td>\n",
+       "      <td>-66.590000</td>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>natural_gas</td>\n",
+       "      <td>VEN</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>279.389000</td>\n",
+       "      <td>15182.60000</td>\n",
+       "      <td>0.001000</td>\n",
+       "      <td>0.002000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>104.341</td>\n",
+       "      <td>5.670</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.424000</td>\n",
+       "      <td>-66.590000</td>\n",
+       "      <td>1980-01-01</td>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>coal</td>\n",
+       "      <td>VEN</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>278.376000</td>\n",
+       "      <td>15597.88000</td>\n",
+       "      <td>0.156000</td>\n",
+       "      <td>0.161000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>110.257</td>\n",
+       "      <td>6.178</td>\n",
+       "      <td>-0.005000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.001000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.424000</td>\n",
+       "      <td>-66.590000</td>\n",
+       "      <td>1981-01-01</td>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>renewables_n_other</td>\n",
+       "      <td>VEN</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6479</th>\n",
+       "      <td>17.485295</td>\n",
+       "      <td>31712.93412</td>\n",
+       "      <td>0.022818</td>\n",
+       "      <td>0.003083</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.020351</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>30.722447</td>\n",
+       "      <td>9.542176</td>\n",
+       "      <td>1992-01-01</td>\n",
+       "      <td>Czech Republic</td>\n",
+       "      <td>renewables_n_other</td>\n",
+       "      <td>CZE</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6480</th>\n",
+       "      <td>17.485295</td>\n",
+       "      <td>31712.93412</td>\n",
+       "      <td>0.176376</td>\n",
+       "      <td>0.176376</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.006167</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>30.722447</td>\n",
+       "      <td>9.542176</td>\n",
+       "      <td>1992-01-01</td>\n",
+       "      <td>Czech Republic</td>\n",
+       "      <td>nuclear</td>\n",
+       "      <td>CZE</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6481</th>\n",
+       "      <td>17.485295</td>\n",
+       "      <td>31712.93412</td>\n",
+       "      <td>0.003083</td>\n",
+       "      <td>0.315134</td>\n",
+       "      <td>18.853136</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.312050</td>\n",
+       "      <td>3645.638701</td>\n",
+       "      <td>0.011101</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000617</td>\n",
+       "      <td>30.722447</td>\n",
+       "      <td>9.542176</td>\n",
+       "      <td>1992-01-01</td>\n",
+       "      <td>Czech Republic</td>\n",
+       "      <td>petroleum_n_other_liquids</td>\n",
+       "      <td>CZE</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6482</th>\n",
+       "      <td>17.485295</td>\n",
+       "      <td>31712.93412</td>\n",
+       "      <td>0.006167</td>\n",
+       "      <td>0.246680</td>\n",
+       "      <td>16.061952</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.241130</td>\n",
+       "      <td>1667.432227</td>\n",
+       "      <td>0.008634</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000617</td>\n",
+       "      <td>30.722447</td>\n",
+       "      <td>9.542176</td>\n",
+       "      <td>1992-01-01</td>\n",
+       "      <td>Czech Republic</td>\n",
+       "      <td>natural_gas</td>\n",
+       "      <td>CZE</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6483</th>\n",
+       "      <td>17.485295</td>\n",
+       "      <td>31712.93412</td>\n",
+       "      <td>0.882498</td>\n",
+       "      <td>0.886815</td>\n",
+       "      <td>94.880528</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.004317</td>\n",
+       "      <td>66.316218</td>\n",
+       "      <td>0.031452</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.001850</td>\n",
+       "      <td>30.722447</td>\n",
+       "      <td>9.542176</td>\n",
+       "      <td>1992-01-01</td>\n",
+       "      <td>Czech Republic</td>\n",
+       "      <td>coal</td>\n",
+       "      <td>CZE</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6484 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             GDP   Population  Energy_production  Energy_consumption  \\\n",
+       "0     279.389000  15182.60000           0.150000            0.155000   \n",
+       "1     279.389000  15182.60000           5.000000            0.812000   \n",
+       "2     279.389000  15182.60000           0.616000            0.616000   \n",
+       "3     279.389000  15182.60000           0.001000            0.002000   \n",
+       "4     278.376000  15597.88000           0.156000            0.161000   \n",
+       "...          ...          ...                ...                 ...   \n",
+       "6479   17.485295  31712.93412           0.022818            0.003083   \n",
+       "6480   17.485295  31712.93412           0.176376            0.176376   \n",
+       "6481   17.485295  31712.93412           0.003083            0.315134   \n",
+       "6482   17.485295  31712.93412           0.006167            0.246680   \n",
+       "6483   17.485295  31712.93412           0.882498            0.886815   \n",
+       "\n",
+       "      CO2_emission  per_capita_production  Energy_intensity_by_GDP   balance  \\\n",
+       "0         0.000000                104.341                    5.670 -0.005000   \n",
+       "1         0.000000                104.341                    5.670  4.188000   \n",
+       "2         0.000000                104.341                    5.670  0.000000   \n",
+       "3         0.000000                104.341                    5.670 -0.000000   \n",
+       "4         0.000000                110.257                    6.178 -0.005000   \n",
+       "...            ...                    ...                      ...       ...   \n",
+       "6479      0.000000                  0.000                    0.000  0.020351   \n",
+       "6480      0.000000                  0.000                    0.000  0.000000   \n",
+       "6481     18.853136                  0.000                    0.000 -0.312050   \n",
+       "6482     16.061952                  0.000                    0.000 -0.241130   \n",
+       "6483     94.880528                  0.000                    0.000 -0.004317   \n",
+       "\n",
+       "        eficiency  energy_dependecy  ...    co2_pc   latitude  longitude  \\\n",
+       "0        0.000000          0.001000  ...  0.000000   6.424000 -66.590000   \n",
+       "1        0.000000          0.003000  ...  0.000000   6.424000 -66.590000   \n",
+       "2        0.000000          0.002000  ...  0.000000   6.424000 -66.590000   \n",
+       "3        0.000000          0.000000  ...  0.000000   6.424000 -66.590000   \n",
+       "4        0.000000          0.001000  ...  0.000000   6.424000 -66.590000   \n",
+       "...           ...               ...  ...       ...        ...        ...   \n",
+       "6479     0.000000          0.000000  ...  0.000000  30.722447   9.542176   \n",
+       "6480     0.000000          0.006167  ...  0.000000  30.722447   9.542176   \n",
+       "6481  3645.638701          0.011101  ...  0.000617  30.722447   9.542176   \n",
+       "6482  1667.432227          0.008634  ...  0.000617  30.722447   9.542176   \n",
+       "6483    66.316218          0.031452  ...  0.001850  30.722447   9.542176   \n",
+       "\n",
+       "            Year         Country                Energy_type CODE_x  \\\n",
+       "0     1980-01-01       Venezuela         renewables_n_other    VEN   \n",
+       "1     1980-01-01       Venezuela  petroleum_n_other_liquids    VEN   \n",
+       "2     1980-01-01       Venezuela                natural_gas    VEN   \n",
+       "3     1980-01-01       Venezuela                       coal    VEN   \n",
+       "4     1981-01-01       Venezuela         renewables_n_other    VEN   \n",
+       "...          ...             ...                        ...    ...   \n",
+       "6479  1992-01-01  Czech Republic         renewables_n_other    CZE   \n",
+       "6480  1992-01-01  Czech Republic                    nuclear    CZE   \n",
+       "6481  1992-01-01  Czech Republic  petroleum_n_other_liquids    CZE   \n",
+       "6482  1992-01-01  Czech Republic                natural_gas    CZE   \n",
+       "6483  1992-01-01  Czech Republic                       coal    CZE   \n",
+       "\n",
+       "          continent clusters  energy_type  \n",
+       "0     South America        1            0  \n",
+       "1     South America        3            3  \n",
+       "2     South America        3            2  \n",
+       "3     South America        1            4  \n",
+       "4     South America        1            0  \n",
+       "...             ...      ...          ...  \n",
+       "6479         Europe        1            0  \n",
+       "6480         Europe        1            1  \n",
+       "6481         Europe        0            3  \n",
+       "6482         Europe        0            2  \n",
+       "6483         Europe        0            4  \n",
+       "\n",
+       "[6484 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframes_charger(route=\"data/processed/df_clusters_v1.csv\")"
+   ]
   }
  ],
  "metadata": {
@@ -423,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4,
   "vscode": {
