--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,6 +830,27 @@
    ],
    "source": [
     "dataframes_charger(route=\"data/processed/df_clusters_v1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['energy_production', 'energy_consumption', 'co2_emission',\n",
+       "       'co2_pc'], dtype=object)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_pickle(\"reg_cluster1.pkl\")"
    ]
   }
  ],
